adding in magic mirror

--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
         <h3><a href="https://github.com/ltdenard/BLE-DragonRadar">BLE Dragon Radar</a></h3>
         <p>Bluetooth + NeoPixels + DBZ = Scouter vibes in an 8x8 matrix.</p>
       </div>
+      <div class="project-card">
+        <h3><a href="https://github.com/ltdenard/magic_mirror">Magic Mirror</a></h3>
+        <p>A sleek customizable smart mirror project powered by Electron and JS modules.</p>
+      </div>
     </div>
   </section>
 
