adding in updates

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
       <div class="project-card">
         <h3><a href="https://github.com/ltdenard/magic_mirror">Magic Mirror</a></h3>
-        <p>A sleek customizable smart mirror project powered by Electron and JS modules.</p>
+        <p>A sleek customizable smart mirror project powered by Raspberry Pi, Nginx, and jQuery modules.</p>
       </div>
     </div>
   </section>
