adding in more updates

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </div>
       <div class="project-card">
         <h3><a href="https://github.com/DistroSeed">DistroSeed</a></h3>
-        <p>Seed your own Linux OS ideas. Build. Modify. Respin. Share.</p>
+        <p>Seed your own Linux OS.</p>
       </div>
       <div class="project-card">
         <h3><a href="https://github.com/ltdenard/BLE-DragonRadar">BLE Dragon Radar</a></h3>
